--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -134,10 +134,15 @@ a:focus {
   vertical-align: middle;
 }
 .intro .intro-body .brand-heading {
-  font-size: 37px;
+  font-size: 33px;
 }
 .intro .intro-body .intro-text {
   font-size: 18px;
+}
+@media (min-width: 280px) {
+  .intro .intro-body .brand-heading {
+    font-size:37px;
+  }
 }
 @media (min-width:320px) {
   .intro .intro-body .brand-heading {
